--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>paranamer</artifactId>
       <version>2.8</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.12</artifactId>
+      <version>2.4.0</version>
+    </dependency>
   </dependencies>
 
   <build>
